Part 2/2.01/ping-pong-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: applications
  name: ping-pong-svc
spec:
  type: ClusterIP
  selector:
    app: ping-pong-app
  ports:
  - protocol: TCP
    port: 2345
    targetPort: 3000
